update AppConfig to fix cors